modfiy .gitignore   remove some file

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 /.idea/
 /c2n-be/deployment/mysql/data/
 /c2n-be/deployment/docker-env/portal-api.env
-/c2n-be/utils/http-client.env.json
+c2n-be/utils/http-client.env.json
 .DS_Store
 .deps
-/hardhat-pj/node_modules
+hardhat-pj/node_modules
