ignore c2n-be/portal-api/src/main/resources/application-dev.yml.bak

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 /c2n-be/deployment/mysql/data/
 /c2n-be/deployment/docker-env/portal-api.env
 c2n-be/utils/http-client.env.json
+c2n-be/portal-api/src/main/resources/application-dev.yml.bak
 .DS_Store
 .deps
 hardhat-pj/node_modules
